ansible/roles/k8s/files/Apps/logging-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana
  labels:
    app: search-engine
    component: kibana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: search-engine
      component: kibana
  template:
    metadata:
      name: kibana
      labels:
        app: search-engine
        component: kibana
    spec:
      containers:
      - image: xxxandr84/fluentd
        name: kibana
