ansible/roles/k8s/files/Apps/search-crawler-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: search-crawler
  labels:
    app: search-engine
    component: crawler
spec:
  replicas: 1
  selector:
    matchLabels:
      app: search-engine
      component: crawler
  template:
    metadata:
      name: search-crawler
      labels:
        app: search-engine
        component: crawler
    spec:
      containers:
      - image: xxxandr84/crawler:2.0
        name: search-crawler
