ansible/roles/k8s/files/Apps/dashboard.yml
---
kind: Service
apiVersion: v1
metadata:
  labels:
  k8s-app: kubernetes-dashboard
  name: kubernetes-dashboard
  namespace: default
spec:
  type: NodePort
  ports:
    - nodePort: 32443
      port: 443
      protocol: TCP
      targetPort: 32443
  selector:
    k8s-app: kubernetes-dashboard
  type: NodePort
