ansible/roles/k8s/files/Apps/kibana-service.yml
kind: Service
apiVersion: v1
metadata:
  name: kibana
  namespace: default
spec:
  ports:
    - name: web
      protocol: TCP
      port: 5601
      targetPort: 5601
  selector:
    k8s-app: kibana
  type: ClusterIP
  sessionAffinity: None
  ipFamilies:
    - IPv4
  internalTrafficPolicy: Cluster
