ansible/roles/k8s/files/Apps/logging-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: kibana
  labels:
    app: search-engine
    component: kibana
spec:
  type: NodePort
  ports:
  - nodePort: 32094
    port: 5601
    protocol: TCP
    targetPort: 5601
  selector:
    app: search-engine
    component: kibana
