ansible/roles/k8s/files/Apps/search-crawler-rabbitmq-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: crawler-rabbitmq
  labels:
    app: search-engine
    component: rabbitmq
    crawler-rabbitmq: "true"
spec:
  type: NodePort
  ports:
  - nodePort: 32093
    port: 5672
    protocol: TCP
    targetPort: 5672
  selector:
    app: search-engine
    component: rabbitmq
    crawler-rabbitmq: "true"
