ansible/roles/k8s/files/Apps/search-ui-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: ui
  labels:
    app: search-engine
    component: ui
spec:
  type: NodePort
  ports:
  - nodePort: 32092
    port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: search-engine
    component: ui
