ansible/roles/k8s/files/Apps/kibana-ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: kibana
  namespace: default
#  annotations:
#    cert-manager.io/cluster-issuer: letsencrypt-prod
#    kubernetes.io/ingress.class: nginx
#    nginx.ingress.kubernetes.io/proxy-body-size: 100m
spec:
  tls:
    - hosts:
        - kibana.******.com
      secretName: kibana-https
  rules:
    - host: kibana.vincze.work
      http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: kibana
                port:
                  name: web
